--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "msw": "^0.44.2",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
   "jest": {
     "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "./setup-env.js"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
